editors/tree-sitter-warrant/grammar.js
/**
 * Tree-sitter grammar for the Warrant authorization rule DSL.
 *
 * Ported from the PHP implementation, which remains the source of truth:
 *   - lexical rules  -> src/DSL/Lexing/Lexer.php (and TokenType.php)
 *   - structure      -> the grammar docblock atop src/DSL/Parsing/WarrantParser.php
 *
 * If the DSL grows new tokens or forms, change them there first, then mirror
 * them here and in editors/vscode/syntaxes/warrant.tmLanguage.json.
 *
 * This grammar is deliberately a little more permissive than the PHP parser:
 * it accepts shapes the parser rejects for semantic reasons (for example
 * mixing a bare `for <schema>` header with braced blocks, or a `because` on a
 * `can` clause). Highlighting a technically-invalid file sensibly is better
 * than collapsing it into an ERROR node, and real diagnostics are the language
 * server's job -- see specs/language-server.md.
 */

module.exports = grammar({
  name: 'warrant',

  // Enables keyword extraction, so `iffy` lexes as one identifier rather than
  // the keyword `if` followed by `fy`.
  word: $ => $.identifier,

  extras: $ => [/\s/, $.comment],

  supertypes: $ => [$._expression, $._argument],

  rules: {
    // A file is any form WarrantParser::parse() reads: a sequence of
    // `for <schema> { ... }` blocks, a rule body, or a condition expression,
    // the last two optionally preceded by a bare `for <schema>` header.
    source_file: $ => seq(
      optional($.schema_header),
      choice(
        repeat(choice($.schema_block, $.ability_block, $.include, $.rule)),
        field('condition', $._expression),
      ),
    ),

    schema_header: $ => seq(
      'for',
      field('schema', $.identifier),
    ),

    schema_block: $ => seq(
      $.schema_header,
      field('body', $.block_body),
    ),

    // A braced body holds rules, or one condition when it follows a `for`
    // header. Inside an ability block only rules are legal; the condition form
    // parses there too, since a sensibly highlighted mistake beats an ERROR node.
    block_body: $ => seq(
      '{',
      choice(
        repeat(choice($.ability_block, $.include, $.rule)),
        field('condition', $._expression),
      ),
      '}',
    ),

    // `@include <template>(<args>) for <abilities>` -- expands a rule template
    // into the rules it stands for, in the place it is written. The `for` list is
    // required in a `for` body and forbidden inside an ability block, where the
    // header already names the abilities; rules with no `for` header either all
    // name their abilities or none do. Both forms are accepted here, since which
    // one is legal depends on where the include sits and a sensibly highlighted
    // mistake beats an ERROR node.
    include: $ => prec.right(seq(
      '@include',
      field('template', $.identifier),
      optional(field('arguments', $.argument_list)),
      optional(seq('for', field('abilities', $.ability_list))),
    )),

    // `can they <abilities> { ... }` heads a body with the abilities its clauses
    // take, so the clauses inside name none of their own. The PHP parser rejects a
    // nested block and a clause that names abilities anyway; both parse here, since
    // a sensibly highlighted mistake beats an ERROR node.
    ability_block: $ => seq(
      'can',
      'they',
      field('abilities', $.ability_list),
      field('body', $.block_body),
    ),

    // One rule: an optional `if <expression>` guard, then the `they can` /
    // `they cannot` clauses that share it. Clauses with no `if` form a single
    // unconditional rule; each `if` begins a new one.
    // Right-associative so consecutive clauses are absorbed greedily into the
    // rule already being built, mirroring parseTheyCanCannotClauses()'s
    // `while ($this->check(THEY))` loop -- every `they` clause up to the next
    // `if` shares that rule's condition. Left associativity would instead end
    // the rule after each clause, wrongly making a trailing `they cannot ...`
    // an unconditional rule of its own.
    rule: $ => prec.right(seq(
      optional($.condition_clause),
      repeat1($._clause),
    )),

    condition_clause: $ => seq(
      'if',
      field('condition', $._expression),
    ),

    _clause: $ => choice($.can_clause, $.cannot_clause),

    can_clause: $ => seq(
      'they',
      'can',
      optional(field('abilities', $.ability_list)),
    ),

    cannot_clause: $ => seq(
      'they',
      'cannot',
      optional(field('abilities', $.ability_list)),
      optional(field('denial', $.because_clause)),
    ),

    // `because` attaches a denial message. The message is fixed at parse time,
    // so it is a literal string or a binding -- never an @context reference.
    because_clause: $ => seq(
      'because',
      field('message', choice($.string, $.named_binding, $.positional)),
    ),

    ability_list: $ => seq(
      $.ability,
      repeat(seq(',', $.ability)),
    ),

    ability: $ => choice($.identifier, $.wildcard),

    wildcard: _ => '*',

    // -- expressions ---------------------------------------------------------

    _expression: $ => choice(
      $.or_expression,
      $.and_expression,
      $.not_expression,
      $.parenthesized_expression,
      $.can_expression,
      $.check_expression,
      $.condition,
    ),

    or_expression: $ => prec.left(1, seq(
      field('left', $._expression),
      'or',
      field('right', $._expression),
    )),

    and_expression: $ => prec.left(2, seq(
      field('left', $._expression),
      'and',
      field('right', $._expression),
    )),

    not_expression: $ => prec.right(3, seq(
      choice('not', '!'),
      field('operand', $._expression),
    )),

    parenthesized_expression: $ => seq('(', $._expression, ')'),

    // An ability check: can(<ability>), or
    // can(<ability> for <handle> [with <map>]).
    //
    // Without the `for` clause nothing is crossed: another ability of the schema
    // the rule is written on, over the row and context it already has.
    can_expression: $ => seq(
      'can',
      '(',
      field('ability', $.identifier),
      optional(seq(
        'for',
        field('target', $.handle),
      )),
      optional(field('context', $.with_clause)),
      ')',
    ),

    // A cross-schema condition check: check(<predicate> for <handle> [with <map>]).
    // The predicate is a full boolean tree read against the *target* schema's
    // vocabulary, so it may nest another check or hold a can.
    check_expression: $ => seq(
      'check',
      '(',
      field('predicate', $._expression),
      'for',
      field('target', $.handle),
      optional(field('context', $.with_clause)),
      ')',
    ),

    // A schema name, optionally row-bound by a single selector argument and
    // optionally naming the rows it selects. Without the selector the handle is
    // unbound (no row involved), and an alias needs a row to name.
    handle: $ => seq(
      field('schema', $.identifier),
      optional(seq('(', field('row', $._argument), ')')),
      optional(seq('as', field('alias', $.identifier))),
    ),

    with_clause: $ => seq(
      'with',
      $.with_entry,
      repeat(seq(',', $.with_entry)),
    ),

    with_entry: $ => seq(
      field('key', $.identifier),
      '=',
      field('value', $._argument),
    ),

    // A local condition on the current schema, with optional arguments.
    condition: $ => seq(
      field('name', $.identifier),
      optional(field('arguments', $.argument_list)),
    ),

    argument_list: $ => seq(
      '(',
      optional(seq($._argument, repeat(seq(',', $._argument)))),
      ')',
    ),

    // -- arguments and literals ----------------------------------------------

    _argument: $ => choice(
      $.string,
      $.float,
      $.integer,
      $.boolean,
      $.null,
      $.named_binding,
      $.positional,
      $.context_ref,
      $.column_ref,
      $.sql_ref,
    ),

    // A check-time context value, resolved per authorization check.
    context_ref: $ => seq(
      '@context',
      field('key', $.identifier),
    ),

    // A database column, resolved to a real table at compile time. One name is the
    // column, on whatever rows the rule is already about; two name a frame — a
    // schema key, or an alias a handle introduced — and then the column.
    column_ref: $ => choice(
      seq(
        '@column',
        field('alias', $.identifier),
        '.',
        field('column', $.identifier),
      ),
      seq(
        '@column',
        field('column', $.identifier),
      ),
    ),

    // An arbitrary SQL fragment, as a literal or a binding resolving to a string.
    sql_ref: $ => seq(
      '@sql',
      field('sql', choice($.string, $.named_binding, $.positional)),
    ),

    // -- terminals -----------------------------------------------------------

    // Only \' \" and \\ are legal escapes; the closing quote must match the opener.
    //
    // The body is one addressable `string_content` node spanning everything
    // between the quotes, which is what lets injections.scm hand an @sql body
    // to the SQL grammar. The double-quoted variant is hidden and aliased, so
    // both quote styles produce the same node name.
    string: $ => choice(
      seq("'", optional($.string_content), "'"),
      seq('"', optional(alias($._double_quoted_content, $.string_content)), '"'),
    ),

    string_content: $ => repeat1(choice($.escape_sequence, token.immediate(/[^'\\]+/))),

    _double_quoted_content: $ => repeat1(choice($.escape_sequence, token.immediate(/[^"\\]+/))),

    escape_sequence: _ => token.immediate(/\\['"\\]/),

    float: _ => /-?\d+\.\d+/,

    integer: _ => /-?\d+/,

    boolean: _ => choice('true', 'false'),

    null: _ => 'null',

    named_binding: _ => /:[A-Za-z_][A-Za-z0-9_-]*/,

    positional: _ => '?',

    // A letter or underscore, then letters, digits, underscores or dashes.
    identifier: _ => /[A-Za-z_][A-Za-z0-9_-]*/,

    // `#` to end of line. A `#` inside a string is literal, since comments are
    // only recognised between tokens.
    comment: _ => token(seq('#', /[^\n]*/)),
  },
});
