editors/tree-sitter-warrant/test/corpus/blocks.txt
=================================
a group of braced schema blocks
=================================

for timesheets {
    they can *
    if is_self they can edit
    they cannot delete because 'Locked.'
}
for documents { they can view }

---

(source_file
  (schema_block
    (schema_header
      schema: (identifier))
    body: (block_body
      (rule
        (can_clause
          abilities: (ability_list
            (ability
              (wildcard)))))
      (rule
        (condition_clause
          condition: (condition
            name: (identifier)))
        (can_clause
          abilities: (ability_list
            (ability
              (identifier))))
        (cannot_clause
          abilities: (ability_list
            (ability
              (identifier)))
          denial: (because_clause
            message: (string
              (string_content)))))))
  (schema_block
    (schema_header
      schema: (identifier))
    body: (block_body
      (rule
        (can_clause
          abilities: (ability_list
            (ability
              (identifier))))))))

==================================
a bare for header with no braces
==================================

for timesheets
they can view
if is_self they can edit

---

(source_file
  (schema_header
    schema: (identifier))
  (rule
    (can_clause
      abilities: (ability_list
        (ability
          (identifier)))))
  (rule
    (condition_clause
      condition: (condition
        name: (identifier)))
    (can_clause
      abilities: (ability_list
        (ability
          (identifier))))))

==============================
an empty block
==============================

for timesheets {
}

---

(source_file
  (schema_block
    (schema_header
      schema: (identifier))
    body: (block_body)))

=========================================
an ability block heading generic clauses
=========================================

can they view, edit {
    if is_public they can
    they cannot because 'Locked.'
}

---

(source_file
  (ability_block
    abilities: (ability_list
      (ability
        (identifier))
      (ability
        (identifier)))
    body: (block_body
      (rule
        (condition_clause
          condition: (condition
            name: (identifier)))
        (can_clause)
        (cannot_clause
          denial: (because_clause
            message: (string
              (string_content))))))))

===========================================
a wildcard ability block beside plain rules
===========================================

if is_admin they can *

can they * {
    if is_suspended they cannot because 'Suspended.'
}

they can list

---

(source_file
  (rule
    (condition_clause
      condition: (condition
        name: (identifier)))
    (can_clause
      abilities: (ability_list
        (ability
          (wildcard)))))
  (ability_block
    abilities: (ability_list
      (ability
        (wildcard)))
    body: (block_body
      (rule
        (condition_clause
          condition: (condition
            name: (identifier)))
        (cannot_clause
          denial: (because_clause
            message: (string
              (string_content)))))))
  (rule
    (can_clause
      abilities: (ability_list
        (ability
          (identifier))))))

======================================
an ability block inside a schema block
======================================

for documents {
    can they view {
        if is_owner they can
    }
}

---

(source_file
  (schema_block
    (schema_header
      schema: (identifier))
    body: (block_body
      (ability_block
        abilities: (ability_list
          (ability
            (identifier)))
        body: (block_body
          (rule
            (condition_clause
              condition: (condition
                name: (identifier)))
            (can_clause)))))))

==================================================
a block header after a clause that named abilities
==================================================

they can view

can they edit, delete {
    if is_owner they can
}

they can list

---

(source_file
  (rule
    (can_clause
      abilities: (ability_list
        (ability
          (identifier)))))
  (ability_block
    abilities: (ability_list
      (ability
        (identifier))
      (ability
        (identifier)))
    body: (block_body
      (rule
        (condition_clause
          condition: (condition
            name: (identifier)))
        (can_clause))))
  (rule
    (can_clause
      abilities: (ability_list
        (ability
          (identifier))))))
