editors/tree-sitter-warrant/test/corpus/cross-schema.txt
============================================
can with a row-bound handle and a with map
============================================

if can(create_timesheet for users(@context user_id))
    and can(create_timesheet for pay_periods(@context pay_period_id) with user_id = @context user_id)
they can create

---

(source_file
  (rule
    (condition_clause
      condition: (and_expression
        left: (can_expression
          ability: (identifier)
          target: (handle
            schema: (identifier)
            row: (context_ref
              key: (identifier))))
        right: (can_expression
          ability: (identifier)
          target: (handle
            schema: (identifier)
            row: (context_ref
              key: (identifier)))
          context: (with_clause
            (with_entry
              key: (identifier)
              value: (context_ref
                key: (identifier)))))))
    (can_clause
      abilities: (ability_list
        (ability
          (identifier))))))

===============================================
check with a predicate over the target schema
===============================================

if check(is_payroll_published_for_user(@context user_id) for pay_periods(@context pay_period_id))
they cannot update because 'Payroll for this pay period is already published.'

---

(source_file
  (rule
    (condition_clause
      condition: (check_expression
        predicate: (condition
          name: (identifier)
          arguments: (argument_list
            (context_ref
              key: (identifier))))
        target: (handle
          schema: (identifier)
          row: (context_ref
            key: (identifier)))))
    (cannot_clause
      abilities: (ability_list
        (ability
          (identifier)))
      denial: (because_clause
        message: (string
          (string_content))))))

========================================
an unbound handle with no row selector
========================================

if can(access_payroll for payroll_admin)
they can view, export

---

(source_file
  (rule
    (condition_clause
      condition: (can_expression
        ability: (identifier)
        target: (handle
          schema: (identifier))))
    (can_clause
      abilities: (ability_list
        (ability
          (identifier))
        (ability
          (identifier))))))

========================================
a handle naming the rows it selects
========================================

if can(view for documents(@context id) as d2)
they can update

---

(source_file
  (rule
    (condition_clause
      condition: (can_expression
        ability: (identifier)
        target: (handle
          schema: (identifier)
          row: (context_ref
            key: (identifier))
          alias: (identifier))))
    (can_clause
      abilities: (ability_list
        (ability
          (identifier))))))

========================================
a can with no for clause, crossing nothing
========================================

if can(do_thing_1)
they can do_thing_2

---

(source_file
  (rule
    (condition_clause
      condition: (can_expression
        ability: (identifier)))
    (can_clause
      abilities: (ability_list
        (ability
          (identifier))))))

========================================
a check predicate nesting another check
========================================

if check(
  is_open and check(is_active for tenants(@column tenant_id))
  for pay_periods(@column pay_period_id) as period
)
they can submit

---

(source_file
  (rule
    (condition_clause
      condition: (check_expression
        predicate: (and_expression
          left: (condition
            name: (identifier))
          right: (check_expression
            predicate: (condition
              name: (identifier))
            target: (handle
              schema: (identifier)
              row: (column_ref
                column: (identifier)))))
        target: (handle
          schema: (identifier)
          row: (column_ref
            column: (identifier))
          alias: (identifier))))
    (can_clause
      abilities: (ability_list
        (ability
          (identifier))))))

========================================
a check predicate holding a can
========================================

if check(is_open and can(view) for pay_periods(@context id))
they can submit

---

(source_file
  (rule
    (condition_clause
      condition: (check_expression
        predicate: (and_expression
          left: (condition
            name: (identifier))
          right: (can_expression
            ability: (identifier)))
        target: (handle
          schema: (identifier)
          row: (context_ref
            key: (identifier)))))
    (can_clause
      abilities: (ability_list
        (ability
          (identifier))))))
