editors/tree-sitter-warrant/test/corpus/expressions.txt
==============================
parentheses, and, or, not
==============================

if (is_self or is_manager) and not is_locked
they can create

---

(source_file
  (rule
    (condition_clause
      condition: (and_expression
        left: (parenthesized_expression
          (or_expression
            left: (condition
              name: (identifier))
            right: (condition
              name: (identifier))))
        right: (not_expression
          operand: (condition
            name: (identifier)))))
    (can_clause
      abilities: (ability_list
        (ability
          (identifier))))))

===================================================
and binds tighter than or, and not binds tightest
===================================================

if not (a or b) and !c or check(x('p') and not y for tenant_settings with k = 1, j = :bee)
they can *
they cannot edit because :msg

---

(source_file
  (rule
    (condition_clause
      condition: (or_expression
        left: (and_expression
          left: (not_expression
            operand: (parenthesized_expression
              (or_expression
                left: (condition
                  name: (identifier))
                right: (condition
                  name: (identifier)))))
          right: (not_expression
            operand: (condition
              name: (identifier))))
        right: (check_expression
          predicate: (and_expression
            left: (condition
              name: (identifier)
              arguments: (argument_list
                (string
                  (string_content))))
            right: (not_expression
              operand: (condition
                name: (identifier))))
          target: (handle
            schema: (identifier))
          context: (with_clause
            (with_entry
              key: (identifier)
              value: (integer))
            (with_entry
              key: (identifier)
              value: (named_binding))))))
    (can_clause
      abilities: (ability_list
        (ability
          (wildcard))))
    (cannot_clause
      abilities: (ability_list
        (ability
          (identifier)))
      denial: (because_clause
        message: (named_binding)))))

===================================================================
a condition with no arguments and one with an empty argument list
===================================================================

if is_self and is_open()
they can view

---

(source_file
  (rule
    (condition_clause
      condition: (and_expression
        left: (condition
          name: (identifier))
        right: (condition
          name: (identifier)
          arguments: (argument_list))))
    (can_clause
      abilities: (ability_list
        (ability
          (identifier))))))
