editors/tree-sitter-warrant/test/corpus/top-level.txt
==================================================
a bare condition expression
==================================================

is_owner or is_admin

---

(source_file
  condition: (or_expression
    left: (condition
      name: (identifier))
    right: (condition
      name: (identifier))))

==================================================
a for header ahead of a condition expression
==================================================

for timesheets

is_owner or not is_admin

---

(source_file
  (schema_header
    schema: (identifier))
  condition: (or_expression
    left: (condition
      name: (identifier))
    right: (not_expression
      operand: (condition
        name: (identifier)))))

==================================================
a bare can() expression, told apart from an ability block
==================================================

can(view for other)

---

(source_file
  condition: (can_expression
    ability: (identifier)
    target: (handle
      schema: (identifier))))

==================================================
braced blocks holding a condition and rules
==================================================

for a { is_owner }
for b { they can view }

---

(source_file
  (schema_block
    (schema_header
      schema: (identifier))
    body: (block_body
      condition: (condition
        name: (identifier))))
  (schema_block
    (schema_header
      schema: (identifier))
    body: (block_body
      (rule
        (can_clause
          abilities: (ability_list
            (ability
              (identifier))))))))
